--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>I am a web developer</h1>
     <img src="images/IMG_20210603_135658.JPG" alt="">
+    <img src="images/car.PNG" alt="">
 </body>
 </html>
