--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>I am a web developer</h1>
     <img src="images/IMG_20210603_135658.JPG" alt="">
     <img src="images/car.png" alt="">
+    <h3>some thing is better then nothing</h3>
+    <h1>my fkirst new repository</h1>
 </body>
 </html>
