--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <img src="images/IMG_20210603_135658.JPG" alt="">
     <img src="images/car.png" alt="">
     <h3>some thing is better then nothing</h3>
-    <h1>my fkirst new repository</h1>
+    <h1>my first new repository</h1>
+    <img src="images/IMG_20210601_183007.jpg" alt="">
+
 </body>
 </html>
