--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>some thing is better then nothing</h3>
     <h1>my first new repository</h1>
     <img src="images/IMG_20210601_183007.jpg" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam veniam iusto vel, accusantium maxime voluptatibus obcaecati ea aliquam beatae deserunt repudiandae vero, quo at eius! Asperiores dolor eligendi ea officia?</p>
 
 </body>
 </html>
